# Fade-Stripper

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: BSP.cpp  BSP.h  BSPTypes.h  Formatting.h  LZMA.cpp  LZMA.h  StaticProps.cpp  StaticProps.h  main.cpp
src/lzma/: 7z.h  7zAlloc.c  7zAlloc.h  7zArcIn.c  7zBuf.c  7zBuf.h  7zBuf2.c  7zCrc.c  7zCrc.h  7zCrcOpt.c  7zDec.c  7zFile.c  7zFile.h  7zStream.c  7zTypes.h  Aes.c  Aes.h  AesOpt.c  Alloc.c  Alloc.h  Bcj2.c  Bcj2.h  Bra.c  Bra.h  Bra86.c  BraIA64.c  Compiler.h  CpuArch.c  CpuArch.h  Delta.c  Delta.h  LzFind.c  LzFind.h  LzFindMt.c  LzFindMt.h  LzHash.h  Lzma2Dec.c  Lzma2Dec.h  Lzma2Enc.c  Lzma2Enc.h  (+32 more)
